# turn_point

./: .env  .gitignore  Naratives.md  SAE_Analysis_Interactive.ipynb  activation_capture.py  claude.md  clean_notes.py  cluster_analysis_Conflict-Focused_Self-Reflection_Analysis1.pkl  cluster_analysis_utils.py  cluster_filtered_sae_analysis.py  cognitive_pattern_analysis.ipynb  cognitive_pattern_dataset_generator.py  cognitive_pattern_questions.md  cognitive_patterns_short14.csv  convert_activations_precision.py  create_feature_tables.py  download_models.py  enrich_activations_metadata.py  examine_activation_structure.py  example_cluster_analysis.py  feature_tables_Executive_Fatigue_and_Avolition.csv  feature_tables_Existential_Overload_and_Worthlessness.csv  feature_tables_Suicidal_Planning_and_Rationalization.csv  generate_activations_sae_analysis.py  main.py  model_loader.py  model_test_inference_clean.ipynb  narrative_generator.py  output_format_neuronpedia_api.json  plan.md  requirements.txt  sae_analysis.py  sentiment_transition_capture.ipynb  sentiment_transition_capture_v2.ipynb  tables3_Conflict-Focused_Self-Reflection.csv  tables3_Existential_Overload_and_Worthlessness.csv  tables3_Identity-Focused_Life_Narrative.csv  tables3_Overwhelmed_Narrative_Processing.csv  tables3_Persistent_Suicidal_Ideation_Focus.csv  tables3_Self-Critical_Rumination.csv  (+6 more)
NNsight_selfie/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  setup.py.backup  test_activation_extractor.py
NNsight_selfie/examples/: Gemma2_Demo.ipynb  Gemma3_Demo.ipynb  Psychiatry_Vector_Arithmetic_Lab.ipynb  Repeng_Pattern_Steering_Test.ipynb  Repeng_Pattern_Steering_Test_Colab.ipynb  Vector_Arithmetic_Lab.ipynb  advanced_usage.py  basic_usage.py  mps_compatibility.py
NNsight_selfie/examples/repeng/: Repeng_Multi_Layer_Steering_Demo.ipynb  Repeng_Pattern_Steering_Test.ipynb  Repeng_Steering_With_Interpretation_Demo.ipynb
NNsight_selfie/nnsight_selfie/: __init__.py  device_utils.py  interpretation_prompt.py  model_agnostic_selfie.py  model_config.py  utils.py
NNsight_selfie/nnsight_selfie/repeng/: patterns_dataset.py  pipeline.py  repeng_activation_extractor.py  repeng_dataset_generator.py  repeng_interpretation_utils.py  repeng_multi_injection.py  repeng_steering_vectors.py  repeng_summary.md
NNsight_selfie/tests/: test_basic.py
SAELens/: .gitignore
analysis/: interpretation.py  pca_analysis.py  sae_interface.py
scripts/: main.py  (+1 more)
(+217 files in other folders)
