[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nnsight-selfie"
dynamic = ["version"]
description = "Model-agnostic neural network interpretation using NNsight"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "NNsight Selfie Contributors"},
]
keywords = [
    "neural networks",
    "interpretability", 
    "transformer models",
    "activation analysis",
    "model agnostic",
    "nnsight",
    "selfie",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=1.9.0",
    "transformers>=4.20.0", 
    "nnsight>=0.3.0",
    "tqdm",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort", 
    "flake8",
]
examples = [
    "jupyter",
    "matplotlib",
    "seaborn",
]

[project.urls]
Homepage = "https://github.com/your-username/nnsight-selfie"
"Bug Reports" = "https://github.com/your-username/nnsight-selfie/issues"
Source = "https://github.com/your-username/nnsight-selfie"
Documentation = "https://github.com/your-username/nnsight-selfie#readme"

[tool.setuptools]
packages = ["nnsight_selfie"]

[tool.setuptools.dynamic]
version = {attr = "nnsight_selfie.__version__"}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["nnsight_selfie"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"